Fix status page molecule background overflowing

--- a/client/public/css/incomplete.scss
+++ b/client/public/css/incomplete.scss
@@ -1,4 +1,6 @@
 .errored, .thank-you {
+  position: relative;
+  overflow: hidden;
   height: 100%;
   background: linear-gradient(to bottom left, #1F2136, #2B2E4B 80%);
   color: white;
